--- a/looplab/index.html
+++ b/looplab/index.html
@@ -106,6 +106,54 @@
     </div>
   </header>
 
+  <!--EXPLORE HEAD-->
+  <section id="explore-head-section">
+    <div class="container">
+      <div class="row">
+        <div class="col text-center py-5">
+          <h1 class="display-4">Explore</h1>
+          <div class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis provident numquam labore
+            aliquid exercitationem excepturi a itaque et corrupti asperiores?</div>
+          <a href="#" class="btn btn-outline-secondary">Find out</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!--EXPLORE SECTION-->
+  <section id="explore-section" class="bg-light text-muted py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <img src="img/explore-section1.jpg" alt="" class="img-fluid mb-3 rounded-circle">
+        </div>
+        <div class="col-md-6">
+          <h3>Explore & Connect</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At necessitatibus, nemo praesentium tempora quia
+            ut quod possimus soluta ullam cum.</p>
+          <div class="d-flex">
+            <div class="p-4 align-self-start">
+              <i class="fas fa-check fa-2x"></i>
+            </div>
+            <div class="p-4 align-self-end">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, eos dolorum cupiditate tempore quae quos!
+            </div>
+          </div>
+          <div class="d-flex">
+            <div class="p-4 align-self-start">
+              <i class="fas fa-check fa-2x"></i>
+            </div>
+            <div class="p-4 align-self-end">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, eos dolorum cupiditate tempore quae quos!
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
 
   <script src="http://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
