--- a/looplab/index.html
+++ b/looplab/index.html
@@ -13,11 +13,11 @@
   <title>Bootstrap Theme</title>
 </head>
 
-<body>
+<body data-spy="scroll" data-target="#main-nav" id="home">
   <!-- START HERE -->
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top" id="main-nav">
     <div class="container">
-      <a href="index.html" class="navbar-brand">LoopLAB</a>
+      <a href="#home" class="navbar-brand">LoopLAB</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -302,6 +302,21 @@
   <script>
     // Get the current year for the copyright
     $('#year').text(new Date().getFullYear());
+
+    //Init Scrollspy
+    $('body').scrollspy({ target: '#main-nav' });
+
+    //Smooth Scrolling
+    $("#main-nav a").on('click', function (event) {
+      event.preventDefault();
+      const hash = this.hash;
+
+      $('html,body').animate({
+        scrollTop: $(hash).offset().top
+      }, 800, function () {
+        window.location.hash = hash;
+      })
+    })
   </script>
 </body>
 
