about with accordion

--- a/mizuxe/index.html
+++ b/mizuxe/index.html
@@ -125,6 +125,86 @@
     </div>
   </section>
 
+  <!--ABOUT AND WHY SECTION-->
+  <section id="about" class="py-5 text-center bg-light">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div class="info-header mb-5">
+            <h1 class="text-primary pb-3">
+              Why This Book?
+            </h1>
+            <p class="lead pb-3">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo soluta fugiat, non accusamus porro in
+              molestiae delectus alias dicta aperiam?
+            </p>
+          </div>
+
+          <!--ACCORDION-->
+          <div id="accordion">
+            <div class="card">
+              <div class="card-header">
+                <h5 class="mb-0">
+                  <div href="#collapse1" data-toggle="collapse" data-parent="#accordion">
+                    <i class="fas fa-arrow-circle-down"></i> Get Inspired
+                  </div>
+                </h5>
+              </div>
+            </div>
+
+            <div id="collapse1" class="collapse show">
+              <div class="card-body">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut voluptatem molestiae eum accusamus velit
+                dicta? Ut, odit error aut rerum molestias cupiditate suscipit illo sed asperiores expedita ipsa
+                architecto molestiae non nisi, at quo ducimus! Commodi cupiditate, eveniet, porro quis adipisci ipsam
+                aliquam alias nesciunt inventore expedita, perspiciatis minus sunt!
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-header">
+                <h5 class="mb-0">
+                  <div href="#collapse2" data-toggle="collapse" data-parent="#accordion">
+                    <i class="fas fa-arrow-circle-down"></i> Gain The Knowledge
+                  </div>
+                </h5>
+              </div>
+            </div>
+
+            <div id="collapse2" class="collapse">
+              <div class="card-body">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut voluptatem molestiae eum accusamus velit
+                dicta? Ut, odit error aut rerum molestias cupiditate suscipit illo sed asperiores expedita ipsa
+                architecto molestiae non nisi, at quo ducimus! Commodi cupiditate, eveniet, porro quis adipisci ipsam
+                aliquam alias nesciunt inventore expedita, perspiciatis minus sunt!
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-header">
+                <h5 class="mb-0">
+                  <div href="#collapse3" data-toggle="collapse" data-parent="#accordion">
+                    <i class="fas fa-arrow-circle-down"></i> Open your mind
+                  </div>
+                </h5>
+              </div>
+            </div>
+
+            <div id="collapse3" class="collapse">
+              <div class="card-body">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut voluptatem molestiae eum accusamus velit
+                dicta? Ut, odit error aut rerum molestias cupiditate suscipit illo sed asperiores expedita ipsa
+                architecto molestiae non nisi, at quo ducimus! Commodi cupiditate, eveniet, porro quis adipisci ipsam
+                aliquam alias nesciunt inventore expedita, perspiciatis minus sunt!
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <script src="http://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
