--- a/mizuxe/index.html
+++ b/mizuxe/index.html
@@ -205,6 +205,142 @@
     </div>
   </section>
 
+  <!--AUTHOR SECTION-->
+  <section id="authors" class="my-5 text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div class="info-header mb-5">
+            <h1 class="text-primary pb-3">
+              Meet The Authors
+            </h1>
+            <p class="lead">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est labore tempore quidem eaque repellat.
+              Consequatur.
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-3 col-md-6">
+            <div class="card">
+              <div class="card-body">
+                <img src="img/person1.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
+                <h3>Susan Williams</h3>
+                <h5 class="text-muted">Lead Writer</h5>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati facilis accusantium dolor, est
+                  pariatur id?</p>
+                <div class="d-flex justify-content-center">
+                  <div class="p-4">
+                    <a href="http://facebook.come">
+                      <i class="fab fa-facebook"></i>
+                    </a>
+                  </div>
+                  <div class="p-4">
+                    <a href="http://twitter.come">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </div>
+                  <div class="p-4">
+                    <a href="http://instagram.come">
+                      <i class="fab fa-instagram"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="card">
+              <div class="card-body">
+                <img src="img/person2.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
+                <h3>Grace Smith</h3>
+                <h5 class="text-muted">Co-writter</h5>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati facilis accusantium dolor, est
+                  pariatur id?</p>
+                <div class="d-flex justify-content-center">
+                  <div class="p-4">
+                    <a href="http://facebook.come">
+                      <i class="fab fa-facebook"></i>
+                    </a>
+                  </div>
+                  <div class="p-4">
+                    <a href="http://twitter.come">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </div>
+                  <div class="p-4">
+                    <a href="http://instagram.come">
+                      <i class="fab fa-instagram"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="card">
+              <div class="card-body">
+                <img src="img/person3.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
+                <h3>Jhon Doe</h3>
+                <h5 class="text-muted">Editor</h5>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati facilis accusantium dolor, est
+                  pariatur id?</p>
+                <div class="d-flex justify-content-center">
+                  <div class="p-4">
+                    <a href="http://facebook.com">
+                      <i class="fab fa-facebook"></i>
+                    </a>
+                  </div>
+                  <div class="p-4">
+                    <a href="http://twitter.com">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </div>
+                  <div class="p-4">
+                    <a href="http://instagram.com">
+                      <i class="fab fa-instagram"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="card">
+              <div class="card-body">
+                <img src="img/person4.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
+                <h3>Kaven Swanson</h3>
+                <h5 class="text-muted">Designer</h5>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati facilis accusantium dolor, est
+                  pariatur id?</p>
+                <div class="d-flex justify-content-center">
+                  <div class="p-4">
+                    <a href="http://facebook.come">
+                      <i class="fab fa-facebook"></i>
+                    </a>
+                  </div>
+                  <div class="p-4">
+                    <a href="http://twitter.come">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </div>
+                  <div class="p-4">
+                    <a href="http://instagram.come">
+                      <i class="fab fa-instagram"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <script src="http://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
